<resources>
    <string name="app_name">Smart Traffic Office</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="login_screen">Login Screen</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_add">Login</string>
    <string name="todo">TODO</string>
    <string name="id_number">ID Number</string>
    <string name="register">Sign Up Screen</string>
    <string name="signUp">Sign Up</string>

</resources>
