<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="cursive"
            android:text="@string/login_screen"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"


            />

        <ImageView
            android:id="@+id/image_view3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/pro"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_bg"
                android:textColor="#ffffff"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#fff" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:textColor="#ffffff"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#fff" />
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                 android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/login_add"
                android:textColor="#fff"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/newUser"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:onClick="registerlink"
                android:textColor="#fff"
                android:textSize="15sp"
                tools:ignore="ObsoleteLayoutParam" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>